--- a/src/app/features/packaging/pages/exit/exit.page.html
+++ b/src/app/features/packaging/pages/exit/exit.page.html
@@ -113,7 +113,7 @@
   </form>
   <ion-grid class="footer-container">
     <ion-row class="row-stepper">
-      <ion-col size="12"> </ion-col>
+      <ion-col size="12"> <warehouse-stepper></warehouse-stepper></ion-col>
     </ion-row>
     <ion-row class="row-button">
       <ion-button
