--- a/src/app/features/dried/pages/output/output.page.scss
+++ b/src/app/features/dried/pages/output/output.page.scss
@@ -1,23 +1,35 @@
 $color-text-primary: #575552;
 $color-text-secondary: #b2b2b2;
 
-ion-grid {
-  .title-menu {
-    color: $color-text-primary;
-    font-size: 3.8vw;
-    margin-top: 5%;
-    font-weight: 700;
-    margin-left: 5%;
+.title-menu {
+  color: $color-text-primary;
+  font-size: 3.8vw;
+  margin-top: 5%;
+  font-weight: 700;
+  margin-left: 5%;
+}
+.subtitle-menu {
+  font-size: 3.4vw;
+  margin-left: 5%;
+}
+.footer {
+  height: 30%;
+  ion-row {
+    height: 75%;
   }
-  .subtitle-menu {
-    font-size: 3.4vw;
-    margin-left: 5%;
+  .row-stepper {
+    height: 25%;
   }
-  .container-button {
-    height: 37vh;
-    width: 100%;
+  .row-button {
+    padding: 0 30%;
     .button {
-      padding: 7%;
+      --ion-color-primary: #e2bd53;
+      --padding-top: 3%;
+      width: 100%;
+      height: 35%;
+      margin-top: 10%;
+      font-size: 3vw;
+      text-transform: none;
     }
   }
 }
