--- a/src/app/features/packaging/pages/open-lot/open-lot.page.html
+++ b/src/app/features/packaging/pages/open-lot/open-lot.page.html
@@ -72,7 +72,7 @@
   </form>
   <ion-grid class="footer-container">
     <ion-row class="row-stepper">
-      <ion-col size="12"> </ion-col>
+      <ion-col size="12"> <warehouse-stepper></warehouse-stepper></ion-col>
     </ion-row>
     <ion-row class="row-button">
       <ion-button
@@ -83,7 +83,7 @@
         <ion-grid>
           <ion-col *ngIf="!loading" size="12">Abrir lote</ion-col>
           <ion-spinner
-            *ngIf="!lotForm.invalid && loading"
+            *ngIf="loading"
             name="crescent"
           ></ion-spinner>
         </ion-grid>
