--- a/src/app/features/packaging/pages/open-lot/open-lot.page.scss
+++ b/src/app/features/packaging/pages/open-lot/open-lot.page.scss
@@ -62,6 +62,7 @@ $color-text-ternary: #b2b2b2;
         height: 35%;
         margin-top: 10%;
         font-size: 3vw;
+        text-transform: none;
       }
     }
   }
