--- a/src/app/features/packaging/pages/packaging-menu/packaging-menu.page.html
+++ b/src/app/features/packaging/pages/packaging-menu/packaging-menu.page.html
@@ -1,17 +1,52 @@
 <app-header [itemBack]="header"></app-header>
 <ion-content>
-  <ion-grid>
-    <ion-row>
-      <ion-col size="12">
-        <h1 class="title-menu">Menú</h1>
-      </ion-col>
-    </ion-row>
-    <ion-row class="container-button">
-      <ng-container *ngFor="let option of options">
-        <ion-col class="button">
-          <app-button-menu [labelButton]="option"></app-button-menu>
+  <ion-row>
+    <ion-col size="12">
+      <h1 class="title-menu">Menú</h1>
+    </ion-col>
+  </ion-row>
+  <ion-segment
+    [(ngModel)]="section"
+    (ionChange)="stepper.next(0,section!==undefined)"
+    class="body"
+  >
+    <ion-grid>
+      <ion-row>
+        <ion-col size="6">
+          <ion-segment-button value="0">Abrir lote</ion-segment-button>
         </ion-col>
-      </ng-container>
+        <ion-col size="6">
+          <ion-segment-button value="1">Cerrar lote</ion-segment-button>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="12" class="segment-odd">
+          <ion-segment-button value="2">Salida</ion-segment-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-segment>
+  <ion-grid class="footer">
+    <ion-row class="row-stepper">
+      <ion-col size="12"
+        ><warehouse-stepper #stepper></warehouse-stepper
+      ></ion-col>
+    </ion-row>
+    <ion-row class="row-button">
+      <ion-button
+        [disabled]="!stepper.getStep(0)"
+        (click)="nextSection()"
+        class="next-button"
+      >
+      <ion-grid>
+        <ion-row>
+          <ion-col size="10">
+            Siguiente
+          </ion-col>
+          <ion-col size="2"><ion-icon name="chevron-forward-outline"></ion-icon></ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-button>
     </ion-row>
   </ion-grid>
 </ion-content>
