--- a/src/app/features/packaging/pages/packaging-menu/packaging-menu.page.scss
+++ b/src/app/features/packaging/pages/packaging-menu/packaging-menu.page.scss
@@ -2,47 +2,68 @@ $color-text-primary: #575552;
 $color-text-secondary: #b2b2b2;
 $color-primary: #e2bd53;
 
-ion-grid {
-  .title-menu {
-    color: $color-text-primary;
-    font-size: 4vw;
-    margin-top: 5%;
-    font-weight: 700;
-    margin-left: 5%;
-  }
-  .subtitle-menu {
-    color: $color-text-secondary;
-    margin-top: 4%;
-    font-size: 3.4vw;
-    margin-left: 5%;
-    margin-bottom: 15%;
-  }
-  .container-button {
-    height: 47vh;
-    width: 100%;
-    .button {
-      margin: 2px 3%;
-      padding: 3%;
+.title-menu {
+  color: $color-text-primary;
+  font-size: 4vw;
+  margin-top: 5%;
+  font-weight: 700;
+  margin-left: 5%;
+  margin-bottom: 10%;
+}
+
+.body {
+  width: 100%;
+  height: 60%;
+  box-sizing: border-box;
+  ion-grid {
+    ion-row {
+      height: 50%;
+      ion-col {
+        padding: 4% 8%;
+        box-sizing: border-box;
+        ion-segment-button {
+          height: 100%;
+          width: 100%;
+          background-color: $color-text-secondary;
+          border-radius: 5px;
+          font-size: 4vw;
+          font-weight: 500;
+          text-transform: none;
+          --indicator-color: transparent;
+        }
+      }
+      .segment-odd {
+        padding: 4% 8%;
+        ion-segment-button {
+          max-width: 200%;
+        }
+      }
     }
   }
 }
-ion-button {
-  // height: 10%;
-  width: 80%;
-  text-transform: none;
-  font-size: 3vw;
-  font-weight: 20;
-  margin: 0;
-  margin-top: 18%;
-  border-radius: 5px;
-  --ion-color-primary: #e2bd53;
+.footer {
+  height: 25%;
+  ion-row {
+    height: 75%;
+  }
+  .row-stepper {
+    height: 25%;
+  }
+  .row-button {
+    padding: 0 30%;
+    .next-button {
+      --ion-color-primary: #e2bd53;
+      --padding-top: 3%;
+      text-transform: none;
+      width: 100%;
+      height: 40%;
+      font-size: 3.5vw;
+      margin-top: 10%;
+    }
+  }
 }
 
-.center {
-  display: flex;
-}
-
-.label-button {
-  font-size: 4vw;
-  font-weight: 100 !important;
+.segment-button-checked {
+  background-color: $color-text-primary !important;
+  color: white;
 }
