fix - Desactivacion de boton iniciar sesion

--- a/src/app/features/landing/pages/login/login.page.html
+++ b/src/app/features/landing/pages/login/login.page.html
@@ -66,7 +66,7 @@
           </div>
           <ion-button
             (click)="onLogin()"
-            [disabled]="loginForm.status=='INVALID'"
+            [disabled]="loginForm.invalid || loading"
           >
             <label *ngIf="!loading">Iniciar Sesión</label>
             <ion-spinner
