fix - Validaciones en campos de formularios y toast durante el envio de informacion a servidor

--- a/src/app/features/dried/components/exit-lot-form/exit-lot-form.component.html
+++ b/src/app/features/dried/components/exit-lot-form/exit-lot-form.component.html
@@ -40,7 +40,7 @@
           [disabled]="disabled(filterProducts)"
         >
           <ng-container *ngFor="let product of filterProducts">
-            <ion-select-option [value]="product.loteId">
+            <ion-select-option [value]="product.id">
               {{ product.description }}
             </ion-select-option>
           </ng-container>
