fix - aclarando letras en login

--- a/src/app/features/landing/pages/login/login.page.scss
+++ b/src/app/features/landing/pages/login/login.page.scss
@@ -1,6 +1,7 @@
 $color-primary: #e2bd53;
 $color-secundary: #707070;
-$color-text-primary: #e2bd53;
+// $color-text-primary: #e2bd53;
+$color-text-primary: #000000;
 $color-text-secondary: #dbdbdb;
 
 .container {
