--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -11,9 +11,13 @@
     <ion-title text-center>
       <ion-grid>
         <ion-row>
-          <ion-col size="12"><label> Almac&eacute;n</label></ion-col>
           <ion-col size="12"
-            ><label> {{ itemBack.title || "Seccion" }}</label></ion-col
+            ><label style="font-size: 28px;"> Almac&eacute;n</label></ion-col
+          >
+          <ion-col size="12"
+            ><label style="font-size: 24px;">
+              {{ itemBack.title || "Seccion" }}</label
+            ></ion-col
           >
         </ion-row>
       </ion-grid>
