--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -8,7 +8,7 @@ ion-toolbar {
     font-weight: 100;
     ion-back-button {
       text-transform: none;
-      font-size: 3vw;
+      font-size: 1.3em;
     }
   }
 }
