--- a/src/app/features/dried/components/exit-lot-form/exit-lot-form.component.html
+++ b/src/app/features/dried/components/exit-lot-form/exit-lot-form.component.html
@@ -6,6 +6,7 @@
           Lote de proveedor*
         </ion-label>
         <ion-select
+          style="--placeholder-color: black; --placeholder-opacity: 0.9;"
           placeholder="Seleccione lote*"
           formControlName="loteId"
           (ionBlur)="change()"
