--- a/src/app/features/dried/components/open-lot-form/open-lot-form.component.scss
+++ b/src/app/features/dried/components/open-lot-form/open-lot-form.component.scss
@@ -13,6 +13,12 @@ form {
   ion-datetime {
     color: $color-text-secondary;
     margin-top: 20px;
+    width: 100%;
+
+    .ion-label {
+      --color: black;
+      font-size: 1.5rem;
+    }
   }
   .error {
     margin-top: 2%;
