--- a/src/app/features/packaging/pages/packaging-menu/packaging-menu.page.html
+++ b/src/app/features/packaging/pages/packaging-menu/packaging-menu.page.html
@@ -10,14 +10,14 @@
       <ion-row>
         <ion-col size="6">
           <ion-button
-            [routerLink]="['/dried/open-lot']"
+            [routerLink]="['/packaging/open-lot']"
             style="--background: #575552;"
             >Abrir lote</ion-button
           >
         </ion-col>
         <ion-col size="6">
           <ion-button
-            [routerLink]="['/dried/close-lot']"
+            [routerLink]="['/packaging/close-lot']"
             style="--background: #575552;"
             >Cerrar lote</ion-button
           >
@@ -26,7 +26,7 @@
       <ion-row>
         <ion-col size="12" class="segment-odd">
           <ion-button
-            [routerLink]="['/dried/exit-lot']"
+            [routerLink]="['/packaging/exit-lot']"
             style="--background: #575552;"
             >Salida</ion-button
           >
