--- a/src/app/features/packaging/pages/close-lot/close-lot.page.html
+++ b/src/app/features/packaging/pages/close-lot/close-lot.page.html
@@ -61,6 +61,7 @@
           placeholder="Ingresar fecha"
           displayFormat="MM/DD/YYYY"
           formControlName="date"
+          disabled
         >
         </ion-datetime>
       </ion-item>
