--- a/src/app/features/packaging/pages/exit/exit.page.html
+++ b/src/app/features/packaging/pages/exit/exit.page.html
@@ -14,6 +14,7 @@
             placeholder="Ingresar fecha"
             displayFormat="MM/DD/YYYY"
             formControlName="date"
+            disabled
           >
           </ion-datetime>
         </ion-item>
