--- a/src/app/features/packaging/pages/open-lot/open-lot.page.scss
+++ b/src/app/features/packaging/pages/open-lot/open-lot.page.scss
@@ -1,6 +1,6 @@
-$color-text-primary: #575552;
+$color-text-primary: black;
 $color-text-secondary: #717171;
-$color-text-ternary: #b2b2b2;
+$color-text-ternary: black;
 
 .open-lote-container {
   width: 100%;
@@ -24,11 +24,11 @@ $color-text-ternary: #b2b2b2;
       margin-top: 4%;
       box-sizing: border-box;
       ion-item {
-        font-size: 4.5vw;
-        color: $color-text-ternary;
+        font-size: 1.3rem;
+        color: $color-text-ternary !important;
         .item-form {
-          font-size: 3.8vw;
-          color: $color-text-ternary;
+          font-size: 1.3rem;
+          color: $color-text-ternary !important;
         }
         &.item-has-focus {
           ion-label {
@@ -61,7 +61,7 @@ $color-text-ternary: #b2b2b2;
         width: 100%;
         height: 35%;
         margin-top: 10%;
-        font-size: 3vw;
+        font-size: 1.3rem;
         text-transform: none;
       }
     }
@@ -74,7 +74,7 @@ $color-text-ternary: #b2b2b2;
 }
 
 ::ng-deep .action-sheet-button {
-  color: $color-text-primary !important;
+  color: black !important;
 }
 
 ::ng-deep ion-picker {
