fix - agregando acentos en palabras

--- a/src/app/features/dried/dialogs/message-dialog/message-dialog.component.html
+++ b/src/app/features/dried/dialogs/message-dialog/message-dialog.component.html
@@ -1,7 +1,7 @@
 <ion-content>
   <div class="content">
     <div class="ion-text-center">
-      <ion-label>¡Confirmacion!</ion-label>
+      <ion-label>¡Confirmación!</ion-label>
     </div>
     <div class="ion-text-center">
       <ion-label class="label">Está a punto de {{ action }} un lote.</ion-label>
