--- a/src/app/features/landing/pages/login/login.page.html
+++ b/src/app/features/landing/pages/login/login.page.html
@@ -1,7 +1,7 @@
 <ion-grid class="container">
   <ion-row class="item-head">
     <ion-col size="12" class="ion-align-self-end">
-      <h1>Almac&eacute;n</h1>
+      <h1>Almacén</h1>
     </ion-col>
   </ion-row>
   <ion-row class="item-body">
