fix - Responsividad de login para pantallas de 7, 9 y 10 pulgadas en formato vertical y horizontal

--- a/src/global.scss
+++ b/src/global.scss
@@ -30,6 +30,12 @@ $color-secundary: #707070;
 $color-text-primary: #e2bd53;
 $color-text-secondary: #dbdbdb;
 
+* {
+  margin: 0;
+  padding: 0;
+  font-size: 14px;
+}
+
 .modal-size {
   border-radius: 5px;
   --width: 80%;
