fix - Responsividad de menu principal

--- a/src/app/features/menu/components/button-menu/button-menu.component.html
+++ b/src/app/features/menu/components/button-menu/button-menu.component.html
@@ -1,3 +1,3 @@
-<ion-button (click)="nagivateTo()">
-  <label class="label-button">{{ labelButton.label }}</label>
+<ion-button class="button" (click)="nagivateTo()">
+  <label class="button__label">{{ labelButton.label }}</label>
 </ion-button>
