--- a/src/global.scss
+++ b/src/global.scss
@@ -25,6 +25,8 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,600&display=swap");
+
 $color-primary: #e2bd53;
 $color-secundary: #707070;
 $color-text-primary: #e2bd53;
@@ -34,6 +36,7 @@ $color-text-secondary: #dbdbdb;
   margin: 0;
   padding: 0;
   font-size: 14px;
+  font-family: "Montserrat", sans-serif;
 }
 
 .modal-size {
