--- a/src/app/features/dried/pages/output/output.page.scss
+++ b/src/app/features/dried/pages/output/output.page.scss
@@ -1,16 +1,40 @@
-$color-text-primary: #575552;
-$color-text-secondary: #b2b2b2;
+@import "../../../../../theme/mixins.scss";
+
+$color-text-secondary: var(--ion-color-secondary);
+$color-text-tertiary: var(--ion-color-tertiary);
 
 .title-menu {
-  color: $color-text-primary;
-  font-size: 3.8vw;
+  color: $color-text-secondary;
   margin-top: 5%;
   font-weight: 700;
   margin-left: 5%;
+
+  @include breakpoint-size(ms-extra-small) {
+    font-size: var(--fs-text-title-xsm);
+  }
+
+  @include breakpoint-size(ms-small) {
+    font-size: var(--fs-text-title-sm);
+  }
+
+  @include breakpoint-size(ms-extra-large) {
+    font-size: var(--fs-text-title-xl);
+  }
 }
 .subtitle-menu {
-  font-size: 3.4vw;
   margin-left: 5%;
+
+  @include breakpoint-size(ms-extra-small) {
+    font-size: var(--fs-text-title-xsm);
+  }
+
+  @include breakpoint-size(ms-small) {
+    font-size: var(--fs-text-title-sm);
+  }
+
+  @include breakpoint-size(ms-extra-large) {
+    font-size: var(--fs-text-title-xl);
+  }
 }
 .footer {
   height: 30%;
