--- a/src/app/features/packaging/pages/close-lot/close-lot.page.scss
+++ b/src/app/features/packaging/pages/close-lot/close-lot.page.scss
@@ -1,11 +1,15 @@
+@import "../../../../../theme/mixins.scss";
+
 $color-text-primary: #575552;
 $color-text-secondary: #717171;
 $color-text-ternary: black;
 
 .close-lote-container {
+  overflow: auto;
   width: 100%;
   height: 100%;
   background-color: white;
+
   .header-container {
     color: $color-text-primary;
     font-weight: 700;
@@ -13,23 +17,42 @@ $color-text-ternary: black;
     margin-top: 5%;
     margin-left: 5%;
     margin-bottom: 5%;
+
+    @include breakpoint-size(ms-extra-small) {
+      font-size: var(--fs-text-title-xsm);
+    }
+
+    @include breakpoint-size(ms-small) {
+      margin: 20px;
+      font-size: var(--fs-text-title-sm);
+    }
+
+    @include breakpoint-size(ms-extra-large) {
+      margin: 25px;
+      font-size: var(--fs-text-title-xl);
+    }
   }
+
   .body-container {
     width: 100%;
     height: 60%;
     padding: 0 5%;
     box-sizing: border-box;
+
     ion-row {
       margin: 0;
       margin-top: 4%;
       box-sizing: border-box;
+
       ion-item {
         font-size: 1.3rem;
         color: $color-text-ternary;
+
         .item-form {
           font-size: 1.3rem;
           color: $color-text-ternary;
         }
+
         &.item-has-focus {
           ion-label {
             color: #e2bd53;
@@ -37,6 +60,7 @@ $color-text-ternary: black;
         }
       }
     }
+
     .error {
       margin-top: 1vh;
       height: 2vh;
@@ -47,14 +71,18 @@ $color-text-ternary: black;
   }
   .footer-container {
     height: 30%;
+
     ion-row {
       height: 75%;
     }
+
     .row-stepper {
       height: 25%;
     }
+
     .row-button {
       padding: 0 30%;
+
       .button {
         --ion-color-primary: #e2bd53;
         --padding-top: 3%;
