--- a/src/app/features/packaging/pages/open-lot/open-lot.page.scss
+++ b/src/app/features/packaging/pages/open-lot/open-lot.page.scss
@@ -1,8 +1,11 @@
+@import "../../../../../theme/mixins.scss";
+
 $color-text-primary: black;
 $color-text-secondary: #717171;
 $color-text-ternary: black;
 
 .open-lote-container {
+  overflow: auto;
   width: 100%;
   height: 100%;
   background-color: white;
@@ -13,6 +16,20 @@ $color-text-ternary: black;
     margin-top: 5%;
     margin-left: 5%;
     margin-bottom: 5%;
+
+    @include breakpoint-size(ms-extra-small) {
+      font-size: var(--fs-text-title-xsm);
+    }
+
+    @include breakpoint-size(ms-small) {
+      margin: 20px;
+      font-size: var(--fs-text-title-sm);
+    }
+
+    @include breakpoint-size(ms-extra-large) {
+      margin: 25px;
+      font-size: var(--fs-text-title-xl);
+    }
   }
   .body-container {
     width: 100%;
