--- a/src/app/features/packaging/pages/packaging-menu/packaging-menu.page.scss
+++ b/src/app/features/packaging/pages/packaging-menu/packaging-menu.page.scss
@@ -1,30 +1,66 @@
-$color-text-primary: #575552;
-$color-text-secondary: #b2b2b2;
-$color-primary: #e2bd53;
+@import "../../../../../theme/mixins.scss";
+
+$color-primary: var(--ion-color-primary);
+$color-text-secondary: var(--ion-color-secondary);
+// $color-text-secondary: var(--ion-color-tertiary);
 
 .title-menu {
-  color: $color-text-primary;
+  color: $color-text-secondary;
   font-size: 4vw;
   margin-top: 5%;
   font-weight: 700;
   margin-left: 5%;
   margin-bottom: 10%;
+
+  @include breakpoint-size(ms-extra-small) {
+    margin: 15px;
+  }
+
+  @include breakpoint-size(ms-small) {
+    margin: 20px;
+    font-size: var(--fs-text-title-sm);
+  }
+
+  @include breakpoint-size(ms-extra-large) {
+    margin: 25px;
+    font-size: var(--fs-text-title-xl);
+  }
+}
+
+.text-button {
+  @include breakpoint-size(ms-extra-small) {
+    margin: 15px;
+  }
+
+  @include breakpoint-size(ms-small) {
+    margin: 20px;
+    font-size: var(--fs-text-title-sm);
+  }
+
+  @include breakpoint-size(ms-extra-large) {
+    margin: 25px;
+    font-size: var(--fs-text-title-xl);
+  }
 }
 
 .body {
   width: 100%;
   height: 60%;
   box-sizing: border-box;
+  margin-top: 10%;
   ion-grid {
     ion-row {
       height: 50%;
       ion-col {
         padding: 4% 8%;
+        @include breakpoint-size(ms-landscape) {
+          padding: 1% 8%;
+        }
         box-sizing: border-box;
         ion-button {
           height: 100%;
           width: 100%;
-          --background: $color-text-primary;
+          --background: $color-text-secondary;
           border-radius: 5px;
           font-size: 4vw;
           font-weight: 500;
@@ -34,6 +70,11 @@ $color-primary: #e2bd53;
       }
       .segment-odd {
         padding: 4% 8%;
+
+        @include breakpoint-size(ms-landscape) {
+          padding: 1% 8%;
+        }
+
         ion-button {
           max-width: 200%;
         }
@@ -64,6 +105,6 @@ $color-primary: #e2bd53;
 }
 
 .segment-button-checked {
-  background-color: $color-text-primary !important;
+  background-color: $color-text-secondary !important;
   color: white;
 }
