--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -12,7 +12,7 @@
       <ion-grid>
         <ion-row>
           <ion-col size="12"
-            ><label style="font-size: 28px;"> Almac&eacute;n</label></ion-col
+            ><label style="font-size: 28px;"> Almacén</label></ion-col
           >
           <ion-col size="12"
             ><label style="font-size: 24px;">
