--- a/src/theme/mixins.scss
+++ b/src/theme/mixins.scss
@@ -11,6 +11,7 @@
   $media-screen-md: "(min-width: 960px)";
   $media-screen-lg: "(min-width: 1024px)";
   $media-screen-xl: "(min-width: 1280px)";
+  $media-landscape: "(orientation: landscape)";
 
   @if $point == ms-extra-small {
     @media #{$media-screen-xsm} {
@@ -31,6 +32,10 @@
     }
   } @else if $point == ms-extra-large {
     @media #{$media-screen-xl} {
+      @content;
+    }
+  } @else if $point == ms-landscape {
+    @media #{$media-landscape} {
       @content;
     }
   }
