--- a/src/app/features/dried/components/open-lot-form/open-lot-form.component.scss
+++ b/src/app/features/dried/components/open-lot-form/open-lot-form.component.scss
@@ -1,6 +1,6 @@
 @import "../../../../../theme/mixins.scss";
 
-$color-secundary: var(--ion-color-secondary);
+$color-secondary: var(--ion-color-secondary);
 $color-text-tertiary: var(--ion-color-tertiary);
 
 .container {
